--- a/WorkingWithDb/App.config
+++ b/WorkingWithDb/App.config
@@ -10,6 +10,7 @@
   <connectionStrings>
     <add name="RecipesEntities" connectionString="metadata=res://*/RecipesModel.csdl|res://*/RecipesModel.ssdl|res://*/RecipesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AVIELSHAKED;initial catalog=Recipes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="NbaModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WorkingWithDb.NbaModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="NbaModel1" connectionString="data source=AVIELSHAKED;initial catalog=NBAPlayers;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
