--- a/WorkingWithDb/App.config
+++ b/WorkingWithDb/App.config
@@ -8,9 +8,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <connectionStrings>
-    <add name="RecipesEntities" connectionString="metadata=res://*/RecipesModel.csdl|res://*/RecipesModel.ssdl|res://*/RecipesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AVIELSHAKED;initial catalog=Recipes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="NbaModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=WorkingWithDb.NbaModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="NbaModel1" connectionString="data source=AVIELSHAKED;initial catalog=NBAPlayers;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="RecipesEntities" connectionString="metadata=res://*/RecipesModel.csdl|res://*/RecipesModel.ssdl|res://*/RecipesModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AVIELSHAKED;initial catalog=Recipes;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="NorthwindEntities" connectionString="metadata=res://*/NorthwindEntities.csdl|res://*/NorthwindEntities.ssdl|res://*/NorthwindEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=AVIELSHAKED;initial catalog=Northwind;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
