--- a/WorkingWithDb/WorkingWithDb.csproj
+++ b/WorkingWithDb/WorkingWithDb.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="itextsharp, Version=5.5.11.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
+      <HintPath>..\packages\iTextSharp.5.5.11\lib\itextsharp.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -95,6 +99,7 @@
     <Compile Include="Order_Detail.cs">
       <DependentUpon>NorthwindEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="PDFExtractor.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Product.cs">
       <DependentUpon>NorthwindEntities.tt</DependentUpon>
